--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,19 +32,19 @@ body {
 #container {
   border: 1px solid var(--soft-red);
   width: 95%;
-  max-width: 500px;
+  max-width: 550px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   flex: 1;
+  padding: 2%;
 }
 
 #robot {
-  border: 1px solid var(--soft-red);
   flex: 3;
 }
 
 #robot-img {
-  border: 1px solid var(--soft-red);
   width: 100%;
 }
 
@@ -60,8 +60,14 @@ h2, h3 {
 
 #statuses {
   flex: 2;
-  line-height: 3;
-  margin: 0 2%;
+  line-height: 3.5;
+  padding: 2%;
+  height: 100%;
+  border-left: 1px solid var(--soft-red);
+}
+
+#main-statuses {
+  line-height: 2.2;
 }
 
 .status {
