--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ body {
 .stats__stat-wrapper {
   align-items: center;
   display: flex;
+  height: 40px;
   justify-content: space-between;
   list-style-type: none;
 }
@@ -85,6 +86,12 @@ body {
 .stats__increase-button {
   background-color: inherit;
   border: none;
+}
+
+.bi-plus-circle-fill {
+  color: dodgerblue;
+  font-size: 2rem;
+  pointer-events: none;
 }
 
 @media (width >= 720px) {
